[package]
name = "uhh"
version = "0.1.0"
description = "A CLI tool to build up complex CLI commands with LLMs using a TUI interface."
authors = ["Paul Colusso <paulcolusso@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.40", features = ["derive"] }
